# qdatacube

./: .hgignore  CMakeLists.txt  LICENSE.TXT  README.md
qdatacube/: CMakeLists.txt  QDatacubeConfig.cmake.in  abstract_aggregator.cpp  abstract_aggregator.h  abstract_filter.cpp  abstract_filter.h  abstract_formatter.cpp  abstract_formatter.h  abstractaggregator.cpp  abstractaggregator.h  abstractfilter.cpp  abstractfilter.h  andfilter.cpp  andfilter.h  cell.cpp  cell.h  column_aggregator.cpp  column_aggregator.h  column_filter.cpp  column_filter.h  column_sum_formatter.cpp  column_sum_formatter.h  columnaggregator.cpp  columnaggregator.h  count_formatter.cpp  count_formatter.h  countformatter.cpp  countformatter.h  datacube.cpp  datacube.h  datacube_colrow.cpp  datacube_colrow.h  datacube_header.cpp  datacube_header.h  datacube_header_model.cpp  datacube_header_model.h  datacube_model.cpp  datacube_model.h  datacube_p.h  datacube_selection.cpp  (+35 more)
qdatacube/test/: CMakeLists.txt  danishnamecube.cpp  danishnamecube.h  modeltest.cpp  testdatacube_model.cpp  testdatacube_model.h  testheaders.cpp  testheaders.h  testplaincube.cpp  testplaincube.h
src/: abstractaggregator.cpp  abstractaggregator.h  abstractfilter.cpp  abstractfilter.h  abstractformatter.cpp  andfilter.cpp  andfilter.h  columnaggregator.cpp  columnsumformatter.cpp  columnsumformatter.h  countformatter.cpp  countformatter.h  datacube.h  datacube_p.h  datacubeselection.cpp  datacubeselection_p.h  datacubeview.cpp  datacubeview.h  datacubeview_p.h  filterbyaggregate.h
src/test/: CMakeLists.txt  buildnamelist.rb  modeltest.h  testdatacube.cpp  testheaders.cpp  testplaincube.h
src/test/data/: 100extra.txt  plaincubedata.txt
